--- a/index.html
+++ b/index.html
@@ -26,17 +26,16 @@
             <p>Questions or suggestions to email</p>
 
             <h2>Links</h2>
+            <a href="mailto:tatamiweb@proton.me">Email @Tatami</a>
             <a href="https://www.uptodown.com/developer/tatami"target="_blank" rel="noopener noreferrer">Uptodown</a>   
             <a href="https://addons.mozilla.org/es/firefox/user/18240851/?utm_source=firefox-browser&utm_medium=firefox-browser&utm_content=addons-manager-user-profile-link"
                 target="_blank" rel="noopener noreferrer">Firefox Add-ons</a>
-            <a href="mailto:Tatami11@proton.me">Email @Tatami</a>
         </nav>
     </section>
 
     <!-- Sección de texto adicional -->
-    <footer class="footer links">
-        <nav class="links">
-            <a href="mailto:Tatami11@proton.me">@Tatami</a>
+    <footer>
+            <a class="footer-a" href="#">@Tatami</a>
     </footer>
 
     <script src="script.js"></script>
